--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,9 +10,9 @@
   <meta name="author" content="Nina Corvelo Benz">
   <meta property="og:title" content="Nina Corvelo Benz" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://nilacobe.github.io/" />
+  <meta property="og:url" content="https://ninacobe.github.io/" />
   <meta property="og:site_name" content="Nina Corvelo Benz" />
-  <link rel="canonical" href="https://nilacobe.github.io/" />
+  <link rel="canonical" href="https://ninacobe.github.io/" />
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
