--- a/libs/external/skeleton/skeleton.css
+++ b/libs/external/skeleton/skeleton.css
@@ -184,7 +184,7 @@ input[type="button"] {
   white-space: nowrap;
   background-color: transparent;
   border-radius: 4px;
-  border: 1px solid #bbb;
+  border: 1px solid #C1D29D;
   cursor: pointer;
   box-sizing: border-box; }
 .button:hover,
@@ -197,7 +197,8 @@ button:focus,
 input[type="submit"]:focus,
 input[type="reset"]:focus,
 input[type="button"]:focus {
-  color: #333;
+  color: #FFF;
+  background-color: #C1D29D;
   border-color: #C1D29D;
   outline: 0; }
 .button.button-primary,
