--- a/libs/external/skeleton_tabs/skeleton-tabs.css
+++ b/libs/external/skeleton_tabs/skeleton-tabs.css
@@ -13,7 +13,7 @@ ul.tab-nav li .button {
     font-size: 13px;
     font-weight: 500;
     color: #555;
-    border: 1px solid #bbb;
+    border-color: #bbb;
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
     margin-bottom: -1px;
