--- a/libs/custom/my_css.css
+++ b/libs/custom/my_css.css
@@ -1,5 +1,11 @@
 h4 {
   letter-spacing: .1rem; }
+.code-text {
+    display: none;
+    border: 1px dotted lightgray;
+    padding: 10px;
+    margin-top: 10px;
+  }
 .container {
   max-width: 800px; }
 .header {
