--- a/libs/custom/my_css.css
+++ b/libs/custom/my_css.css
@@ -1,6 +1,6 @@
 h4 {
   letter-spacing: .1rem; }
-.code-text {
+.abstract-text {
     display: none;
     border: 1px dotted lightgray;
     padding: 10px;
