--- a/libs/custom/my_css.css
+++ b/libs/custom/my_css.css
@@ -4,6 +4,7 @@ h4 {
     border: 1px dotted lightgray;
     padding: 10px;
     margin-top: 10px;
+    font-size: 0.9em;
   }
 .container {
   max-width: 800px; }
