--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,11 +57,11 @@
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-<!--   <link rel="icon" type="image/png" href={{ "/libs/icon.png" | prepend: site.baseurl }}>
-  <link rel="shortcut icon" type="image/png" href={{ "/libs/icon.png" | prepend: site.baseurl }}> -->
+  <link rel="icon" type="image/png" href={{ "/libs/icon-website.png" | prepend: site.baseurl }}>
+  <link rel="shortcut icon" type="image/png" href={{ "/libs/icon-website.png" | prepend: site.baseurl }}>
   
-  <link rel="icon" type="image/x-icon" href={{ "/libs/favicon.ico" | prepend: site.baseurl }}>
-  <link rel="shortcut icon" type="image/x-icon" href={{ "/libs/favicon.ico" | prepend: site.baseurl }} />
+<!--   <link rel="icon" type="image/x-icon" href={{ "/libs/favicon.ico" | prepend: site.baseurl }}>
+  <link rel="shortcut icon" type="image/x-icon" href={{ "/libs/favicon.ico" | prepend: site.baseurl }} /> -->
 
 </head>
 <body>
